sportdings/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sportdings-frontend
  namespace: sportdings
  labels:
    app: sportdings-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sportdings-frontend
  template:
    metadata:
      labels:
        app: sportdings-frontend
    spec:
      containers:
      - name: sportdings
        image: registry.flou21.de/sport-dings-frontend:e0a4a178-30cf-443c-b557-7de82e02d4f0
        ports:
        - containerPort: 80
        imagePullSecrets:
        - name: regcred
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: sportdings-frontend-service
  namespace: sportdings
spec:
  selector:
    app: sportdings-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
