sportdings/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: sportdings
  name: mysql
spec:
  serviceName: mysql-service
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7.34
        args:
          - "--default-authentication-plugin=mysql_native_password"
        ports:
        - containerPort: 3306
        resources:
          limits:
            memory: "512Mi"
            cpu: "250m"
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: vol
            subPath: data
      volumes:
        - name: vol
          persistentVolumeClaim:
            claimName: mysql-claim
---
apiVersion: v1
kind: Service
metadata:
  namespace: sportdings
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
