sportdings/sportdings.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sportdings
  namespace: sportdings
  labels:
    app: sportdings
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sportdings
  template:
    metadata:
      labels:
        app: sportdings
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: sportdings
        image: registry.flou21.de/sport-dings:5115ac94-6d37-492e-807b-00d2f4d9973c
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: sportdings-service
  namespace: sportdings
spec:
  selector:
    app: sportdings
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
