sportdings/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sportdings-ingress
  namespace: sportdings
  annotations:
    kubernetes.io/ingress.class: nginx
    # kubernetes.io/tls-acme: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # If you encounter a redirect loop or are getting a 307 response code 
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: sportdings.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sportdings-frontend-service
          servicePort: 8080
  - host: api.sportdings.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sportdings-service
          servicePort: 8080
  - host: db.sportdings.com
    http:
      paths:
      - path: /
        backend:
          serviceName: phpmyadmin-service
          servicePort: 8080
